Music Select : refactor